added /cr add and /cr remove command :>